SFDC Automation/src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>MA Lead Qualification</fullName>
        <description>Marketing Automation Lead Qualification Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Disqualified</fullName>
        </values>
        <values>
            <fullName>Inquiry</fullName>
        </values>
        <values>
            <fullName>MCL</fullName>
        </values>
        <values>
            <fullName>MQL</fullName>
        </values>
        <values>
            <fullName>Pre Inquiry</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Renurture</fullName>
        </values>
        <values>
            <fullName>SQL</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Ryder Lead Qualification</fullName>
        <description>Default Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Renurture</fullName>
        </values>
        <values>
            <fullName>Suspect</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
        <values>
            <fullName>Unread</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACCT_ID__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>Account ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADDR_ID__c</fullName>
        <label>Address ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANNUAL_SALES__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>Annual Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APPROXSIZE__c</fullName>
        <label>Approximate Size</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assign_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to assign a sales user to a Lead</description>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDM_CODE__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>BDM Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM_NAME__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>BDM Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOUT_TOVER_CD__c</fullName>
        <label>Buyout/Takeover</label>
        <picklist>
            <picklistValues>
                <fullName>No Takeover</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Buyout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takeover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BOUT_TYPE_CD__c</fullName>
        <label>Takeover Type</label>
        <picklist>
            <controllingField>BOUT_TOVER_CD__c</controllingField>
            <picklistValues>
                <fullName>Takeover from Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Takeover from Ownership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BOUT_VHCL_DEPO__c</fullName>
        <label>Buyout Vehicle Deposition</label>
        <picklist>
            <controllingField>BOUT_TOVER_CD__c</controllingField>
            <picklistValues>
                <fullName>Lease Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sell Vehicle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_overall_vehicle_count__c</fullName>
        <description>Related</description>
        <label>Best overall vehicle count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Fax__c</fullName>
        <label>Billing Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Billing_Phone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BranchNumber__c</fullName>
        <description>This stores the company&apos;s internal branch name, code or #</description>
        <inlineHelpText>This stores the company&apos;s internal branch name, code or #</inlineHelpText>
        <label>Branch #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brochure__c</fullName>
        <label>Brochure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CALL_DATE__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>Call Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CFO_Email__c</fullName>
        <label>CFO Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CFO_NAME__c</fullName>
        <label>CFO Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFO_TITLE__c</fullName>
        <label>CFO Title</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPT_ID__c</fullName>
        <label>Competitor</label>
        <picklist>
            <controllingField>BOUT_TYPE_CD__c</controllingField>
            <picklistValues>
                <fullName>IdealLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NationalLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PacLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ComCar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dixie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatorlease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interstate Natn&apos;l</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hogan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>COMPTOROUTSOURCED__c</fullName>
        <label>Compt or Outsourced</label>
        <picklist>
            <picklistValues>
                <fullName>Compt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outsourced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSA_Score__c</fullName>
        <label>CSA Score</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Opt_Out_Reason__c</fullName>
        <label>Call Opt Out Reason</label>
        <picklist>
            <controllingField>DoNotCall</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only to be contacted by Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classes_3_to_5_truck_count_at_site__c</fullName>
        <label>Classes 3 to 5 truck count at site</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Classes_3_to_8_total_truck_count__c</fullName>
        <label>Classes 3 to 8 total truck count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Classes_3_to_8_truck_count_at_site__c</fullName>
        <label>Classes 3 to 8 truck count at site</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Classes_6_to_8_total_truck_count__c</fullName>
        <label>Classes 6 to 8 total truck count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Classes_6_to_8_truck_count_at_site__c</fullName>
        <label>Classes 6 to 8 truck count at site</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Export</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Connection__IC_DoNotCall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not call from IC</description>
        <label>IC Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connection__IC_LastContact__c</fullName>
        <description>Last Time contacted with IntelliConnection</description>
        <inlineHelpText>Last Time contacted with IntelliConnection</inlineHelpText>
        <label>IC Last Contacted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Connection__IC_Last_Disposition__c</fullName>
        <label>IC Last Disposition</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Rating__c</fullName>
        <label>Credit Rating</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lookup to the customer&apos;s account for customer leads</description>
        <label>Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>FMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <label>DBA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBD_NAME__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>DBD Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBD__c</fullName>
        <label>DBD</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DISPOSITION_CODE__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>Disposition Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_NAME__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>DM Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_PHONE__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>DM Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DM_TITLE__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>DM Title</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOT_Number__c</fullName>
        <label>DOT Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>D&amp;B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMSCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Seek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iSell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Flaged_as_MQL__c</fullName>
        <description>Updates when Lead Status is MQL</description>
        <label>Date Flaged as MQL</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_since_created_date__c</fullName>
        <formula>NOW()- CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since created date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_last_modified_date__c</fullName>
        <formula>TODAY()-LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last modified date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Business Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance/Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations- Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations - Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R and D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Distanct_to_Ryder_miles__c</fullName>
        <label>Distance to Ryder (miles)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Domestic_Ultimate_DUNS__c</fullName>
        <description>Domestic Ultimate DUNS Number</description>
        <label>Domestic Ultimate DUNS #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duns_HQ__c</fullName>
        <description>DUNS Headquarters Number</description>
        <label>Duns HQ #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EDP1__BuySignals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Buy Signals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentActivityDate__c</fullName>
        <label>Most Recent Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__MostRecentBuySignalDate__c</fullName>
        <label>Most Recent Buy Signal Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP1__TotalInboundActivity__c</fullName>
        <label>Total Inbound Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EMPLOYEE_CNT__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>Employee Count</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESTEQUIPTYPE__c</fullName>
        <label>Estimated Equipment Type</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EXTRACT_NAME__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>Extract Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Reason__c</fullName>
        <label>Email Opt Out Reason</label>
        <picklist>
            <controllingField>HasOptedOutOfEmail</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only to be contacted by Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_does_not_exist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email does not exist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Phone__c</fullName>
        <description>The phone number of the employee for employee leads</description>
        <label>Employee Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employee_Range_on_site__c</fullName>
        <label>Employee Range on site</label>
        <picklist>
            <picklistValues>
                <fullName>No data or 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-199</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200-249</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250-499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500 and over</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 TO 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 TO 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 TO 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15-19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-74</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75-99</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Total_Range__c</fullName>
        <label>Employee Total Range</label>
        <picklist>
            <picklistValues>
                <fullName>No data or 0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2500-3499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3500-4999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000-9999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000 and over</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 to 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25-49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50-99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-199</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200-249</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250-499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500-999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000-2499</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Zipcode__c</fullName>
        <description>The zip code of the employee for employee leads</description>
        <label>Employee Zipcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Incorporated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual Consumer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Proposed_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Estimated Proposed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Lead_Cross_Check__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Lead Cross Check</label>
        <referenceTo>External_Lead_Cross_Check__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINAL_APPROVAL__c</fullName>
        <description>Field in Concentrix Lead File</description>
        <label>Final Approval</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMCSA_leased_tractor_count__c</fullName>
        <label>FMCSA leased tractor count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_leased_trailer_count__c</fullName>
        <label>FMCSA leased trailer count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_leased_truck_count__c</fullName>
        <label>FMCSA leased truck count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_owned_tractor_count__c</fullName>
        <label>FMCSA owned tractor count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_owned_trailer_count__c</fullName>
        <label>FMCSA owned trailer count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMCSA_owned_truck_count__c</fullName>
        <label>FMCSA owned truck count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FMS_Sales_Territory_ID__c</fullName>
        <label>FMS Sales Territory ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMS_VP_of_sales__c</fullName>
        <label>FMS VP of sales</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Opt_Out_Reason__c</fullName>
        <label>Fax Opt Out Reason</label>
        <picklist>
            <controllingField>HasOptedOutOfFax</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Only to be contacted by Salesperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Federal_ID_Number__c</fullName>
        <label>Federal ID Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flagged_as_MQL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True when Lead Status is MQL</description>
        <label>Flagged as MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FleetSeek_total__c</fullName>
        <label>FleetSeek total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fleet_Composition__c</fullName>
        <label>Fleet Composition</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS__c</fullName>
        <description>Global Ultimate DUNS Number</description>
        <label>Global Ultimate DUNS #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasOptedOutofMail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mail Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedOutofSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survey Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAM__c</fullName>
        <label>IAM</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incorporation_Date__c</fullName>
        <label>Incorporation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsOpportunityNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Opportunity Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_UVS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag use to identify UVS Lead created through Eloqua</description>
        <inlineHelpText>The flag use to identify UVS Lead created through Eloqua</inlineHelpText>
        <label>Is UVS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOC_ID__c</fullName>
        <label>Location ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Grade__c</fullName>
        <description>Eloqua Lead Grade</description>
        <label>Lead Grade</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>